[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erupt = "0.22.0"
anyhow = "1.0.57"
piet = "0.2.0"
piet-gpu = { path = '../../piet-gpu/piet-gpu' }
piet-gpu-hal = { path = '../../piet-gpu/piet-gpu-hal' }

[target.'cfg(unix)'.dependencies]
xcb = "1.1.1"